--- a/GitSphere.html
+++ b/GitSphere.html
@@ -170,6 +170,13 @@
     <!-- Header Section -->
     <header id="home">
         <h1>Welcome to My Enhanced Website</h1>
+        <p><strong>Home (new2.html)</strong>: This is the main landing page of my portfolio. From here, you can access other sections and explore my content.</p>
+        <p><strong>About Me (aboutme.html)</strong>: Learn more about my background, skills, and interests on this page, where I provide an overview of my professional journey.</p>
+        <p><strong>Website 1 (web.html)</strong>: This external website showcases one of my latest projects, where I experimented with modern web design techniques.</p>
+        <p><strong>Website 2 (web2.html)</strong>: On this site, you’ll find a collection of my past work, including coding projects and technical write-ups.</p>
+        <p><strong>Website 3 (web3.html)</strong>: This website features a comprehensive case study that dives deep into a project I completed recently.</p>
+        <p><strong>Website 4 (web4.html)</strong>: A creative space where I share my design-focused projects, including UI/UX work and visual design elements.</p>
+        <p><strong>Website 5 (My_Website.html)</strong>: This page is dedicated to my GitHub profile and includes direct links to my repositories for developers and collaborators.</p>
         <h4>Here’s a paragraph specifically about the links in the navigation section:
 
 "The links in this navigation bar serve as gateways to various parts of my online presence. Each link is designed to take you to a different website, offering a curated collection of content and resources. From my personal homepage to several dedicated websites, these links ensure that you can explore everything I have to offer with ease. Each site opens in a new tab, allowing you to maintain your place while diving deeper into specific topics or projects. Whether you're visiting the 'About Me' section or discovering new external websites, these links keep the navigation smooth and efficient."</h4>
