--- a/git.html
+++ b/git.html
@@ -151,12 +151,12 @@
     <nav>
         <ul>
             <li><a href="#home-section">Home</a></li>
-            <li><a href="#about-section">About Me</a></li>
-            <li><a href="#website1-section" target="_blank">Website 1</a></li>
-            <li><a href="#website2-section" target="_blank">Website 2</a></li>
-            <li><a href="#website3-section" target="_blank">Website 3</a></li>
-            <li><a href="#website4-section" target="_blank">Website 4</a></li>
-            <li><a href="#website5-section" target="_blank">Website 5</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
+            <li><a href="web.html" target="_blank">Website 1</a></li>
+            <li><a href="web2.html" target="_blank">Website 2</a></li>
+            <li><a href="web3.html" target="_blank">Website 3</a></li>
+            <li><a href="web4.html" target="_blank">Website 4</a></li>
+            <li><a href="New_Website.html" target="_blank">Website 5</a></li>
         </ul>
     </nav>
 
