--- a/git.html
+++ b/git.html
@@ -151,7 +151,7 @@
     <nav>
         <ul>
             <li><a href="#home-section">Home</a></li>
-            <li><a href="#about-section" href="aboutme.html">About Me</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
             <li><a href="#website1-section" target="_blank">Website 1</a></li>
             <li><a href="#website2-section" target="_blank">Website 2</a></li>
             <li><a href="#website3-section" target="_blank">Website 3</a></li>
