--- a/git.html
+++ b/git.html
@@ -167,7 +167,7 @@
     </section>
 
     <!-- About Me Section -->
-    <section class="nav-block" id="about-section">
+    <section class="nav-block" id="aboutme.html">
         <h2>About Me</h2>
         <p>Learn more about my background, skills, and interests on this page, where I provide an overview of my professional journey.</p>
     </section>
