--- a/git.html
+++ b/git.html
@@ -173,7 +173,7 @@
     </section>
 
     <!-- Website 1 Section -->
-    <section class="nav-block" id="website1-section">
+    <section class="nav-block" id="web.html">
         <h2>Website 1</h2>
         <p>This external website showcases one of my latest projects, where I experimented with modern web design techniques.</p>
     </section>
