--- a/git.html
+++ b/git.html
@@ -168,7 +168,7 @@
 
     <!-- About Me Section -->
     <section class="nav-block" id="aboutme.html">
-        <h2>About Me</h2>
+        <h2><button type="button" onclick= "href="aboutme.html" About Me "</button></h2>
         <p>Learn more about my background, skills, and interests on this page, where I provide an overview of my professional journey.</p>
     </section>
 
