--- a/git.html
+++ b/git.html
@@ -153,10 +153,10 @@
             <li><a href="#home-section">Home</a></li>
             <li><a href="aboutme.html">About Me</a></li>
             <li><a href="web.html" target="_blank">Website 1</a></li>
-            <li><a href="#website2-section" target="_blank">Website 2</a></li>
-            <li><a href="#website3-section" target="_blank">Website 3</a></li>
-            <li><a href="#website4-section" target="_blank">Website 4</a></li>
-            <li><a href="#website5-section" target="_blank">Website 5</a></li>
+            <li><a href="web2.html" target="_blank">Website 2</a></li>
+            <li><a href="web3.html" target="_blank">Website 3</a></li>
+            <li><a href="web4.html" target="_blank">Website 4</a></li>
+            <li><a href="New_Website.html" target="_blank">Website 5</a></li>
         </ul>
     </nav>
 
@@ -168,7 +168,7 @@
 
     <!-- About Me Section -->
     <section class="nav-block" id="aboutme.html">
-        <h2><button type="button" onclick= "href="aboutme.html" About Me "</button></h2>
+        <h2>About Me</h2>
         <p>Learn more about my background, skills, and interests on this page, where I provide an overview of my professional journey.</p>
     </section>
 
@@ -179,25 +179,25 @@
     </section>
 
     <!-- Website 2 Section -->
-    <section class="nav-block" id="website2-section">
+    <section class="nav-block" id="web2.html">
         <h2>Website 2</h2>
         <p>On this site, you’ll find a collection of my past work, including coding projects and technical write-ups.</p>
     </section>
 
     <!-- Website 3 Section -->
-    <section class="nav-block" id="website3-section">
+    <section class="nav-block" id="web3.html">
         <h2>Website 3</h2>
         <p>This website features a comprehensive case study that dives deep into a project I completed recently.</p>
     </section>
 
     <!-- Website 4 Section -->
-    <section class="nav-block" id="website4-section">
+    <section class="nav-block" id="web4.html">
         <h2>Website 4</h2>
         <p>A creative space where I share my design-focused projects, including UI/UX work and visual design elements.</p>
     </section>
 
     <!-- Website 5 Section -->
-    <section class="nav-block" id="website5-section">
+    <section class="nav-block" id="New_Website.html">
         <h2>Website 5</h2>
         <p>This page is dedicated to my GitHub profile and includes direct links to my repositories for developers and collaborators.</p>
     </section>
