--- a/git.html
+++ b/git.html
@@ -152,7 +152,7 @@
         <ul>
             <li><a href="#home-section">Home</a></li>
             <li><a href="aboutme.html">About Me</a></li>
-            <li><a href="web.html" target="_blank">Website 1</a></li>
+            <li><a href="https://rajnandinisuryawanshi.github.io/" target="_blank">Website 1</a></li>
             <li><a href="web2.html" target="_blank">Website 2</a></li>
             <li><a href="web3.html" target="_blank">Website 3</a></li>
             <li><a href="web4.html" target="_blank">Website 4</a></li>
