--- a/git.html
+++ b/git.html
@@ -31,6 +31,7 @@
             text-align: center;
             margin-top: 20px;
             text-shadow: 2px 2px #aaa;
+            animation: fadeInDown 2s;
         }
 
         /* Navigation */
