--- a/git.html
+++ b/git.html
@@ -151,12 +151,12 @@
     <nav>
         <ul>
             <li><a href="#home-section">Home</a></li>
-            <li><a href="aboutme.html">About Me</a></li>
-            <li><a href="https://rajnandinisuryawanshi.github.io/" target="_blank">Website 1</a></li>
-            <li><a href="https://komalpanditkar.github.io/prajkta.html" target="_blank">Website 2</a></li>
-            <li><a href="web2.html" target="_blank">Website 3</a></li>
-            <li><a href="web4.html" target="_blank">Website 4</a></li>
-            <li><a href="New_Website.html" target="_blank">Website 5</a></li>
+            <li><a href="https://iffat01.github.io/">Website 1</a></li>
+            <li><a href="https://rajnandinisuryawanshi.github.io/" target="_blank">Website 2</a></li>
+            <li><a href="https://komalpanditkar.github.io/prajkta.html" target="_blank">Website 3</a></li>
+            <li><a href="web2.html" target="_blank">Website 4</a></li>
+            <li><a href="web4.html" target="_blank">Website 5</a></li>
+            <li><a href="New_Website.html" target="_blank">Website 6</a></li>
         </ul>
     </nav>
 
