--- a/git.html
+++ b/git.html
@@ -167,32 +167,32 @@
     </section>
 
     <!-- About Me Section -->
-    <section class="nav-block" id="aboutme.html">
-        <h2>About Me</h2>
+    <section class="nav-block" id="https://iffat01.github.io/">
+        <h2>Website 1</h2>
         <p>Learn more about my background, skills, and interests on this page, where I provide an overview of my professional journey.</p>
     </section>
 
     <!-- Website 1 Section -->
-    <section class="nav-block" id="web.html">
-        <h2>Website 1</h2>
+    <section class="nav-block" id="https://rajnandinisuryawanshi.github.io/">
+        <h2>Website 2</h2>
         <p>This external website showcases one of my latest projects, where I experimented with modern web design techniques.</p>
     </section>
 
     <!-- Website 2 Section -->
     <section class="nav-block" id="web2.html">
-        <h2>Website 2</h2>
+        <h2>Website 3</h2>
         <p>On this site, you’ll find a collection of my past work, including coding projects and technical write-ups.</p>
     </section>
 
     <!-- Website 3 Section -->
     <section class="nav-block" id="web3.html">
-        <h2>Website 3</h2>
+        <h2>Website 4</h2>
         <p>This website features a comprehensive case study that dives deep into a project I completed recently.</p>
     </section>
 
     <!-- Website 4 Section -->
     <section class="nav-block" id="web4.html">
-        <h2>Website 4</h2>
+        <h2>Website 5</h2>
         <p>A creative space where I share my design-focused projects, including UI/UX work and visual design elements.</p>
     </section>
 
