--- a/git.html
+++ b/git.html
@@ -179,13 +179,13 @@
     </section>
 
     <!-- Website 2 Section -->
-    <section class="nav-block" id="web2.html">
+    <section class="nav-block" id="https://komalpanditkar.github.io/prajkta.html">
         <h2>Website 3</h2>
         <p>On this site, you’ll find a collection of my past work, including coding projects and technical write-ups.</p>
     </section>
 
     <!-- Website 3 Section -->
-    <section class="nav-block" id="web3.html">
+    <section class="nav-block" id="web2.html">
         <h2>Website 4</h2>
         <p>This website features a comprehensive case study that dives deep into a project I completed recently.</p>
     </section>
