--- a/GitSphere_01.html
+++ b/GitSphere_01.html
@@ -151,12 +151,12 @@
     <nav>
         <ul>
             <li><a href="#home-section">Home</a></li>
-            <li><a href="#project1">Project 1: Responsive Design</a></li>
-            <li><a href="#project2" target="_blank">Project 2: Backend with Node.js</a></li>
-            <li><a href="#project3" target="_blank">Project 3: Front-end with React</a></li>
-            <li><a href="#project4" target="_blank">Project 4: Full Stack (MERN)</a></li>
-            <li><a href="#project5" target="_blank">Project 5: UI/UX Design</a></li>
-            <li><a href="#project6" target="_blank">Project 6: GitHub Repositories</a></li>
+            <li><a href="https://iffat01.github.io/">Project Portfolio</a></li>
+            <li><a href="https://rajnandinisuryawanshi.github.io/" target="_blank">Backend Showcase</a></li>
+            <li><a href="https://komalpanditkar.github.io/prajkta.html" target="_blank">React Creations</a></li>
+            <li><a href="web2.html" target="_blank">Full-Stack Demo</a></li>
+            <li><a href="web4.html" target="_blank">Design & UI Work</a></li>
+            <li><a href="New_Website.html" target="_blank">GitHub Repos</a></li>
         </ul>
     </nav>
 
@@ -166,40 +166,40 @@
         <p>Welcome to my portfolio! Here you can find all my latest projects, GitHub links, and explore my work as a developer.</p>
     </section>
 
-    <!-- Project 1: Responsive Design -->
-    <section class="nav-block" id="project1">
-        <h2>Project 1: Responsive Design</h2>
-        <p>This project focuses on responsive web design and interactive elements using HTML, CSS, and JavaScript.</p>
+    <!-- Website 1 Section -->
+    <section class="nav-block" id="https://iffat01.github.io/">
+        <h2>Project Portfolio</h2>
+        <p>This link leads to my first personal project where I implemented responsive design and interactive elements using HTML, CSS, and JavaScript.</p>
     </section>
 
-    <!-- Project 2: Backend with Node.js -->
-    <section class="nav-block" id="project2">
-        <h2>Project 2: Backend with Node.js</h2>
-        <p>Explore this project, where I implemented a Node.js and Express-based backend with a live demo of the application.</p>
+    <!-- Website 2 Section -->
+    <section class="nav-block" id="https://rajnandinisuryawanshi.github.io/">
+        <h2>Backend Showcase</h2>
+        <p>On this website, I showcase a project focused on back-end development using Node.js and Express, with a live demo.</p>
     </section>
 
-    <!-- Project 3: Front-end with React -->
-    <section class="nav-block" id="project3">
-        <h2>Project 3: Front-end with React</h2>
-        <p>This project showcases my work in building interactive front-end web applications using React and Bootstrap.</p>
+    <!-- Website 3 Section -->
+    <section class="nav-block" id="https://komalpanditkar.github.io/prajkta.html">
+        <h2>React Creations</h2>
+        <p>Here, I present a series of front-end projects that include interactive web applications, built with React and Bootstrap.</p>
     </section>
 
-    <!-- Project 4: Full Stack (MERN) -->
-    <section class="nav-block" id="project4">
-        <h2>Project 4: Full Stack (MERN)</h2>
-        <p>This full-stack application is built using the MERN stack (MongoDB, Express, React, Node.js) as part of my learning journey.</p>
+    <!-- Website 4 Section -->
+    <section class="nav-block" id="web2.html">
+        <h2>Full-Stack Demo</h2>
+        <p>This link showcases my journey in learning full-stack development, featuring a MERN stack application.</p>
     </section>
 
-    <!-- Project 5: UI/UX Design -->
-    <section class="nav-block" id="project5">
-        <h2>Project 5: UI/UX Design</h2>
-        <p>This section showcases my portfolio of design work, with a focus on creating visually appealing and user-friendly interfaces.</p>
+    <!-- Website 5 Section -->
+    <section class="nav-block" id="web4.html">
+        <h2>Design & UI Work</h2>
+        <p>A portfolio of design and development work with a focus on creating visually appealing and user-friendly interfaces.</p>
     </section>
 
-    <!-- Project 6: GitHub Repositories -->
-    <section class="nav-block" id="project6">
-        <h2>Project 6: GitHub Repositories</h2>
-        <p>This page provides direct access to my GitHub repositories, featuring open-source projects and collaborative work.</p>
+    <!-- Website 6 Section -->
+    <section class="nav-block" id="New_Website.html">
+        <h2>GitHub Repos</h2>
+        <p>This page provides direct access to my GitHub repositories, showcasing a variety of open-source projects and collaborative work.</p>
     </section>
 
     <!-- Parallax Section -->
