--- a/my_portfolio.html
+++ b/my_portfolio.html
@@ -12,7 +12,7 @@
     <a>About.us</a>
 </header>
 <body>
-    <h1>Hi, this is iffat deshmukh</h1>
+    <h1>Hi, this is Rehan Shaikh</h1>
     <br>
     <h2>Presenting the projects of my classmates</h2>
 <br>
