--- a/GitSphere_01.html
+++ b/GitSphere_01.html
@@ -151,7 +151,7 @@
     <nav>
         <ul>
             <li><a href="#home-section">Home</a></li>
-            <li><a href="https://iffat01.github.io/">Project Portfolio</a></li>
+            <li><a href="https://rehanx17.github.io/my_portfolio.html">Project Portfolio</a></li>
             <li><a href="https://rajnandinisuryawanshi.github.io/" target="_blank">Backend Showcase</a></li>
             <li><a href="https://komalpanditkar.github.io/prajkta.html" target="_blank">React Creations</a></li>
             <li><a href="web2.html" target="_blank">Full-Stack Demo</a></li>
