--- a/index.html
+++ b/index.html
@@ -1,57 +1,107 @@
-from flask import Flask, render_template, request, redirect, url_for
-import sqlite3
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Doctor Appointment Booking</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+        }
 
-app = Flask(__name__)
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            padding: 20px;
+        }
 
-# Create SQLite database if it doesn't exist
-def init_db():
-    conn = sqlite3.connect('appointments.db')
-    cursor = conn.cursor()
-    cursor.execute('''
-        CREATE TABLE IF NOT EXISTS appointments (
-            id INTEGER PRIMARY KEY AUTOINCREMENT,
-            name TEXT NOT NULL,
-            email TEXT NOT NULL,
-            date TEXT NOT NULL,
-            time TEXT NOT NULL,
-            doctor TEXT NOT NULL
-        )
-    ''')
-    conn.commit()
-    conn.close()
+        header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
 
-@app.route('/')
-def index():
-    return render_template('index.html')
+        h1 {
+            color: #333;
+        }
 
-@app.route('/book', methods=['POST'])
-def book_appointment():
-    # Getting form data
-    name = request.form['name']
-    email = request.form['email']
-    date = request.form['date']
-    time = request.form['time']
-    doctor = request.form['doctor']
+        .appointment-form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 500px;
+            margin: 0 auto;
+        }
 
-    # Insert appointment into the database
-    conn = sqlite3.connect('appointments.db')
-    cursor = conn.cursor()
-    cursor.execute('''
-        INSERT INTO appointments (name, email, date, time, doctor)
-        VALUES (?, ?, ?, ?, ?)
-    ''', (name, email, date, time, doctor))
-    conn.commit()
-    conn.close()
+        label {
+            display: block;
+            margin: 10px 0 5px;
+            color: #555;
+        }
 
-    return redirect(url_for('thank_you'))
+        input, select, button {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0 20px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
 
-@app.route('/thank_you')
-def thank_you():
-    return '''
-        <h1>Thank you for booking an appointment!</h1>
-        <p>We have received your appointment request.</p>
-    '''
+        button {
+            background-color: #4CAF50;
+            color: white;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+        }
 
-if __name__ == '__main__':
-    init_db()  # Initialize the database when the app starts
-    app.run(debug=True)
+        button:hover {
+            background-color: #45a049;
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 14px;
+            color: #888;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>Book Your Doctor Appointment</h1>
+        </header>
+
+        <form action="/book" method="POST" class="appointment-form">
+            <label for="name">Full Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="date">Date of Appointment:</label>
+            <input type="date" id="date" name="date" required>
+
+            <label for="time">Time of Appointment:</label>
+            <input type="time" id="time" name="time" required>
+
+            <label for="doctor">Select Doctor:</label>
+            <select id="doctor" name="doctor" required>
+                <option value="Dr. Smith">Dr. Smith</option>
+                <option value="Dr. Johnson">Dr. Johnson</option>
+                <option value="Dr. Lee">Dr. Lee</option>
+            </select>
+
+            <button type="submit">Book Appointment</button>
+        </form>
+
+        <footer>
+            <p>&copy; 2025 Doctor Appointment Booking</p>
+        </footer>
+    </div>
+</body>
+</html>
