--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 
             <label for="doctor">Select Doctor:</label>
             <select id="doctor" name="doctor" required>
-                <option value="Dr. Smith">Dr. Smith</option>
-                <option value="Dr. Johnson">Dr. Johnson</option>
-                <option value="Dr. Lee">Dr. Lee</option>
+                <option value="Dr. Smith">Dr. Rehan</option>
+                <option value="Dr. Johnson">Dr. Iffat</option>
+                <option value="Dr. Lee">Dr. Adnan</option>
             </select>
 
             <button type="submit">Book Appointment</button>
