--- a/index.html
+++ b/index.html
@@ -2,106 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doctor Appointment Booking</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        header {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        h1 {
-            color: #333;
-        }
-
-        .appointment-form {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
-            margin: 0 auto;
-        }
-
-        label {
-            display: block;
-            margin: 10px 0 5px;
-            color: #555;
-        }
-
-        input, select, button {
-            width: 100%;
-            padding: 10px;
-            margin: 5px 0 20px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        button {
-            background-color: #4CAF50;
-            color: white;
-            font-size: 16px;
-            border: none;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #45a049;
-        }
-
-        footer {
-            text-align: center;
-            margin-top: 20px;
-            font-size: 14px;
-            color: #888;
-        }
-    </style>
+    <title>Doctor Appointment</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>Book Your Doctor Appointment</h1>
-        </header>
-
-        <form action="/book" method="POST" class="appointment-form">
-            <label for="name">Full Name:</label>
-            <input type="text" id="name" name="name" required>
+        <h1>Book Appointment</h1>
+        <form method="POST" action="/book">
+            <label for="name">Name:</label>
+            <input type="text" name="name" required>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" name="email" required>
 
-            <label for="date">Date of Appointment:</label>
-            <input type="date" id="date" name="date" required>
+            <label for="date">Date:</label>
+            <input type="date" name="date" required>
 
-            <label for="time">Time of Appointment:</label>
-            <input type="time" id="time" name="time" required>
+            <label for="time">Time:</label>
+            <input type="time" name="time" required>
 
-            <label for="doctor">Select Doctor:</label>
-            <select id="doctor" name="doctor" required>
-                <option value="Dr. Smith">Dr. Rehan</option>
-                <option value="Dr. Johnson">Dr. Iffat</option>
-                <option value="Dr. Lee">Dr. Adnan</option>
+            <label for="doctor">Doctor:</label>
+            <select name="doctor" required>
+                {% for doc in doctors %}
+                    <option value="{{ doc }}">{{ doc }}</option>
+                {% endfor %}
             </select>
 
-            <button type="submit">Book Appointment</button>
+            <button type="submit">Book</button>
         </form>
-
-        <footer>
-            <p>&copy; 2025 Doctor Appointment Booking</p>
-        </footer>
     </div>
 </body>
 </html>
