--- a/index.html
+++ b/index.html
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Doctor Appointment</title>
+    <title>Student Admission</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="container">
-        <h1>Book Appointment</h1>
-        <form method="POST" action="/book">
-            <label for="name">Name:</label>
-            <input type="text" name="name" required>
-
-            <label for="email">Email:</label>
-            <input type="email" name="email" required>
-
-            <label for="date">Date:</label>
-            <input type="date" name="date" required>
-
-            <label for="time">Time:</label>
-            <input type="time" name="time" required>
-
-            <label for="doctor">Doctor:</label>
-            <select name="doctor" required>
-                {% for doc in doctors %}
-                    <option value="{{ doc }}">{{ doc }}</option>
-                {% endfor %}
-            </select>
-
-            <button type="submit">Book</button>
+        <h1>Student Admission Form</h1>
+        {% if success %}
+            <p class="success">Admission submitted successfully!</p>
+        {% endif %}
+        <form method="POST">
+            <input type="text" name="name" placeholder="Student Name" required><br>
+            <input type="email" name="email" placeholder="Email Address" required><br>
+            <input type="text" name="course" placeholder="Course Applied For" required><br>
+            <button type="submit">Submit</button>
         </form>
+
+        {% if students %}
+            <h2>Submitted Students:</h2>
+            <ul>
+                {% for student in students %}
+                    <li>{{ student.name }} - {{ student.email }} - {{ student.course }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
     </div>
 </body>
 </html>
