--- a/web.html
+++ b/web.html
@@ -1,85 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>My Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNkufI8kkEvZyKr-PbiYaw-uohbRcVZEtNdQ&s');
-            background-size: cover;
-            /*background-position: center;*/
-            background-repeat: no repeat;
-            
-        }
-
-        header {
-            background-color: #333;
-            color: #D2B48C;
-            padding: 10px 0;
-            text-align: center;
-        }    
-
-        nav {
-            text-align: center;
-            background-color: #444;
-            padding: 10px 0;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 18px;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-
-        .main-content {
-            padding: 20px;
-            text-align: center;
-            
-        }
-
-        footer {
-            background-color: #333;
-            color: white;
-            padding: 10px 0;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Online Shopping System</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #333;
+      color: white;
+      padding: 1em;
+      text-align: center;
+    }
+    nav {
+      background: #444;
+      display: flex;
+      justify-content: center;
+      padding: 0.5em 0;
+    }
+    nav a {
+      color: white;
+      padding: 0.5em 1em;
+      text-decoration: none;
+    }
+    nav a:hover {
+      background: #666;
+    }
+    .container {
+      max-width: 900px;
+      margin: 2em auto;
+      padding: 1em;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    h2 {
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 0.3em;
+    }
+    .product {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1em;
+      border-bottom: 1px solid #ddd;
+    }
+    .product button {
+      background: #28a745;
+      color: white;
+      border: none;
+      padding: 0.5em 1em;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    .product button:hover {
+      background: #218838;
+    }
+    .admin-section {
+      margin-top: 2em;
+      border-top: 2px solid #ccc;
+      padding-top: 1em;
+    }
+    input, select {
+      padding: 0.5em;
+      margin: 0.5em 0;
+      width: 100%;
+      max-width: 300px;
+    }
+    .login {
+      margin-bottom: 2em;
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <h1>Online Shopping System</h1>
+  </header>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">Products</a>
+    <a href="#">Login</a>
+    <a href="#">Admin</a>
+  </nav>
 
-    <header>
-        <h1>Welcome To My Work Place</h1>
-    </header>
-
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#contact">Contact</a>
-        <a href="#MySelf">About Me !</a>
-    </nav>
-
-    <div class="main-content">
-        <h2>Main Content</h2>
-        <p>This is where your content goes. You can add images, text, videos, or anything else you want to display on your website.</p>
+  <div class="container">
+    <div class="login">
+      <h2>Login</h2>
+      <input type="text" id="username" placeholder="Username" />
+      <input type="password" id="password" placeholder="Password" />
+      <button onclick="login()">Login</button>
     </div>
 
-    <footer>
-        <p>&copy; 2024 My Website</p>
-    </footer>
+    <h2>Products</h2>
+    <div class="product">
+      <span>Product 1</span>
+      <button onclick="buyProduct('Product 1')">Buy</button>
+    </div>
+    <div class="product">
+      <span>Product 2</span>
+      <button onclick="buyProduct('Product 2')">Buy</button>
+    </div>
+    <div class="product">
+      <span>Product 3</span>
+      <button onclick="buyProduct('Product 3')">Buy</button>
+    </div>
 
+    <div class="admin-section">
+      <h2>Admin Panel</h2>
+      <input type="text" id="newProduct" placeholder="New Product Name" />
+      <button onclick="addProduct()">Add Product</button>
+      <ul id="adminProductList"></ul>
+    </div>
+  </div>
+
+  <script>
+    let isAdmin = false;
+
+    function login() {
+      const username = document.getElementById("username").value;
+      const password = document.getElementById("password").value;
+      if (username === "admin" && password === "admin") {
+        isAdmin = true;
+        alert("Admin login successful");
+        document.querySelector(".admin-section").style.display = "block";
+      } else {
+        alert("User login successful");
+      }
+    }
+
+    function buyProduct(name) {
+      alert("You bought " + name);
+    }
+
+    function addProduct() {
+      if (!isAdmin) {
+        alert("Only admin can add products");
+        return;
+      }
+      const product = document.getElementById("newProduct").value;
+      if (product.trim() === "") return;
+      const productList = document.getElementById("adminProductList");
+      const li = document.createElement("li");
+      li.textContent = product;
+      productList.appendChild(li);
+      document.getElementById("newProduct").value = "";
+    }
+
+    // Initially hide admin section
+    document.querySelector(".admin-section").style.display = "none";
+  </script>
 </body>
 </html>
