--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
           <button class="btn">See Services</button>
         </div>
         <div class="header__form">
-          <form action="/contact" method="POST">
+        <form action="https://rs-healthcare-backend.onrender.com/contact" method="POST">
+                                                                   /*<form action="/contact" method="POST">*/
   <h4>Book Now</h4>
   <input type="text" name="name" placeholder="Full Name" required />
   <input type="email" name="email" placeholder="Email" required />
