--- a/index.html
+++ b/index.html
@@ -35,15 +35,13 @@
           <button class="btn">See Services</button>
         </div>
         <div class="header__form">
-        <form action="https://rs-healthcare-backend.onrender.com/contact" method="POST">
-                                                                   /*<form action="/contact" method="POST">*/
-  <h4>Book Now</h4>
-  <input type="text" name="name" placeholder="Full Name" required />
-  <input type="email" name="email" placeholder="Email" required />
-  <textarea name="message" placeholder="Your message" required></textarea>
-  <button class="btn form__btn" type="submit">Book Appointment</button>
-</form>
-          
+          <form action="/contact" method="POST">
+            <h4>Book Now</h4>
+            <input type="text" name="name" placeholder="Full Name" required />
+            <input type="email" name="email" placeholder="Email" required />
+            <textarea name="message" placeholder="Your message" required></textarea>
+            <button class="btn form__btn" type="submit">Book Appointment</button>
+          </form>
         </div>
       </div>
     </header>
